# rust-axum-api

./: .cursorrules  .dockerignore  .env  .gitignore  Cargo.toml  README.md
docker/: Dockerfile.production  docker-compose.dev.yml  docker-compose.yml
src/: app.rs  config.rs  lib.rs  main.rs  middleware.rs  routes.rs
src/api/: README.md  mod.rs
src/api/auth/: handler.rs  mod.rs  routes.rs
src/api/middleware/: mod.rs  tenant.rs
src/api/tenants/: README.tenants.md  handler.rs  mod.rs  routes.rs
src/api/test/: handler.rs  mod.rs  routes.rs
src/api/test_api/: README.test_api.md  handler.rs  mod.rs  routes.rs
src/api/test_database/: MONITORING.md  README.test_database.md  handler.rs  mod.rs  routes.rs
src/config/: README.config.md  README.md  environment.rs  mod.rs  state.rs
src/controllers/: hello_controller.rs  mod.rs  ping.rs
src/core/: README.core.md  README.md  logging.rs  mod.rs  server.rs
src/database/: CONNECTION_POOLS_ANALYSIS.md  README.database.md  README.md  database_service.rs  mod.rs  postgres_service.rs  redis_manager.rs  schema_manager.rs
src/database/sql/schemas/: functions.sql  master_tenants.sql  schema_init.sql  tenant_info.sql  tenants_schema.sql
src/features/: mod.rs
src/features/healthcheck/: handler.rs  mod.rs  routes.rs
src/features/hello/: handler.rs  mod.rs  routes.rs
src/features/tests/: handler.rs  mod.rs  routes.rs
src/middleware/: error_middleware.rs  mod.rs  response_formatter.rs
src/middlewares/: mod.rs  response_wrapper.rs  start_time.rs
src/models/: env_vars.rs  mod.rs  response.rs  response_format.rs  state.rs
src/routes/: fallback_handler.rs  hello.rs  hello_route.rs  mod.rs  routes.rs
src/shared/: mod.rs
src/shared/error_handler/: error_handler.rs  mod.rs
src/shared/response_handler/: mod.rs  response_handler.rs
src/shared/utils/: mod.rs  utils_impl.rs
src/utils/: README.md  README.utils.md  error_handling.rs  mod.rs  utils.rs
src/utils/error_handler/: error_handler.rs  mod.rs
src/utils/response_handler/: mod.rs  response_handler.rs
src/utils/utils/: mod.rs  utils_impl.rs
tests/: global_errors.rs  healthcheck.rs  mod.rs
tests/global_errors/: 404.rs  408.rs  413.rs  500.rs
