[package]
name = "rust-axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Enough features for typical route macros and JSON handling
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
