[package]
name = "my-axum-project"
version = "0.1.0"
edition = "2021"
description = "This is a simple Axum application that demonstrates how to set up a server with middleware, error handling, and graceful shutdown. It uses the `axum` framework for building web applications in Rust, and `tokio` for asynchronous programming."
license = "MIT OR Apache-2.0"
authors = ["ale"]
repository = "https://github.com/alemartinezz/my-axum-project"
rust-version = "1.85.1"

[features]
production = []

[dependencies]
# * We use the full Tokio feature set for concurrency and I/O
tokio = { version = "1.44.2", features = ["full"] }

# * Using axum 0.8 with minimal dependencies
axum = "0.8.3"

# * Serde is used for serialization; features = ["derive"] for auto impl
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# * Tower is used for layering services (timeouts, error handling, etc.)
tower = { version = "0.5.2", features = ["util", "timeout"] }

# * For collecting axum::body::Body into Bytes
http-body-util = "0.1.3"

# * Tracing is used for structured, leveled logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# * Chrono is used for date-time support within logs and responses
chrono = "0.4"

# * ListenFd for reloading the server (e.g., for Docker or dev env)
listenfd = "1.0.2"

# * dotenv helps load environment variables from a .env file
dotenv = "0.15"

# * anyhow used for more convenient error handling
anyhow = "1.0"

once_cell = "1.18.0"
